k8s/manifests/ingress-monitoring.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-grafana
  namespace: observability
spec:
  ingressClassName: nginx
  rules:
    - host: monitoring-demo-k8s-for-small-teams.northeurope.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prom-stack-grafana
                port:
                  number: 80
